# iwanttodie

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h
string/: CMakeLists.txt  main.c  string_.c  string_.h
string/tasks/: allTasks.h  digitToStart.h  removeAdjacentEqualLetter.h  removeNonLetters.h  spaceInsteadDigit.h
